Customizable Highway Presets (#905)
* WIP Rebuild of Active Players List PR for engine-refactor

* Rebuilt ActivePlayerList and ActivePlayerListItem components. Added these to the Status Bar

* Update Instrument icon on Active Players List when changing a profile's GameMode, or when choosing an instrument in the Diffisulty Select Menu.

* WIP Attempt to add star power glow to Color Presets

* Fix one type mismatch

* WIP adding color preset option for star power glow colour on note highways

* Update YARG.Core

* Implemented Star Power colour and Groove colours to ColorProfiles
Introduced new "Common" section for ColorProfiles
Star Power and Groove colours can now be customized or disabled using the above ColorProfile properties
Added "Boring" default color preset which hides Groove and Star Power glow effects.

* Update YARG.Core

* Added (non-groove) background colours to ColorProfile
Force Star Power and Groove on for FakeTrackPlayer

* Update YARG.Core

* Move highway colours to separate HighwayPreset class, and update usages
Update TrackPreviewBuilder to force Star Power and Groove on as needed
Added Highway Preset option to ProfileSidebar
Moved localization text to subkey

* Fixed Highway Preset changes not being applied on Profiles List screen

* Removed unused localization key.
Update YARG.Core

* Remove HighwayPreset from ReplayData

* Remove one unused parameter in ReplayData

* Removed TrackMaterial.Preset.Layer struct and simplified usage
Addressed PR feedback

* Update YARG.Core

* Update YARG.Core

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -960,7 +960,8 @@
         "PresetType": {
             "CameraSettingsContainer": "Camera Presets",
             "ColorProfileContainer": "Color Profiles",
-            "EnginePresetContainer": "Engine Presets"
+            "EnginePresetContainer": "Engine Presets",
+            "HighwayPresetContainer" : "Highway Presets"
         },
         "PresetSetting": {
             "CameraPreset": {
@@ -1325,6 +1326,35 @@
                 "SustainDropLeniency": {
                     "Name": "Sustain Drop Leniency",
                     "Description": ""
+                }
+            },
+            "HighwayPreset" : {
+                "BackgroundBaseColor1": {
+                    "Name": "Background Base Color 1"
+                },
+                "BackgroundBaseColor2": {
+                    "Name": "Background Base Color 2"
+                },
+                "BackgroundBaseColor3": {
+                    "Name": "Background UNUSED Color"
+                },
+                "BackgroundPatternColor": {
+                    "Name": "Background Pattern Color"
+                },
+                "BackgroundGrooveBaseColor1": {
+                    "Name": "Groove Base Color 1"
+                },
+                "BackgroundGrooveBaseColor2": {
+                    "Name": "Groove Base Color 2"
+                },
+                "BackgroundGrooveBaseColor3": {
+                    "Name": "Groove UNUSED Color"
+                },
+                "BackgroundGroovePatternColor": {
+                    "Name": "Groove Pattern Color"
+                },
+                "StarPowerColor": {
+                    "Name": "Star Power Color"
                 }
             }
         }
