Add option to sort by Play Count.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -95,7 +95,8 @@
             "ProKeys": "Pro Keys",
             "Vocals": "Vocals",
             "Harmony": "Harmony",
-            "Band": "Band"
+            "Band": "Band",
+            "Playcount": "Play Count"
         }
     },
     "Menu": {
