--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -962,6 +962,10 @@
             "ShowPlayerNameWhenStartingSong": {
                 "Name": "Show Player Name When Starting Song",
                 "Description": "If enabled, the player name and instrument icon will appear when the song starts."
+            },
+            "UseThreeLaneLyricsInHarmony": {
+                "Name": "Use Three Lyric Lanes In Harmony",
+                "Description": "If enabled, the game will display three lyric lanes in harmony mode (one for each harmony). When disabled, the game will combine the lyrics of harmonies 2 and 3 into one lane at the top."
             }
         },
         "PresetType": {
