Generalize and localize standard prc events

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -339,7 +339,138 @@
                 "Okay": "OKAY",
                 "Strong": "STRONG"
             }
-        }
+        },
+		"PracticeSections": {
+				"Intro": "Intro",
+				"IntroSlow": "Intro slow",
+				"IntroFast": "Intro fast",
+				"IntroHeavy": "Intro heavy",
+				"QuietIntro": "Quiet intro",
+				"NoiseIntro": "Noise intro",
+				"DrumIntro": "Drum intro",
+				"BassIntro": "Bass intro",
+				"VocalIntro": "Vocal intro",
+				"GtrIntro": "Gtr intro",
+				"ViolinIntro": "Violin intro",
+				"StringsIntro": "Strings intro",
+				"OrchIntro": "Orch intro",
+				"HornIntro": "Horn intro",
+				"HarmonicaIntro": "Harmonica intro",
+				"OrganIntro": "Organ intro",
+				"PianoIntro": "Piano intro",
+				"KeyboardIntro": "Keyboard intro",
+				"DJIntro": "DJ intro",
+				"IntroHook": "Intro hook",
+				"IntroRiff": "Intro riff",
+				"FadeIn": "Fade in",
+				"DrumsEnter": "Drums enter",
+				"BassEnters": "Bass enters",
+				"GtrEnters": "Gtr enters",
+				"Gtr2Enters": "Gtr2 enters",
+				"BandEnters": "Band enters",
+				"SynthEnters": "Synth enters",
+				"KeyboardEnters": "Keyboard enters",
+				"Organ enters": "Organ enters",
+				"Piano enters": "Piano enters",
+				"KickIt": "Kick It!",
+				"IntroVerse": "Intro verse",
+				"IntroChorus": "Intro chorus",
+				"Verse": "Verse",
+				"AltVerse": "Alt verse",
+				"QuietVerse": "Quiet verse",
+				"PreVerse": "Pre-verse",
+				"PostVerse": "Post-verse",
+				"Chorus": "Chorus",
+				"ChorusBreak": "Chorus break",
+				"BreakdownChorus": "Breakdown chorus",
+				"AltChorus": "Alt chorus",
+				"PreChorus": "Pre-chorus",
+				"PostChorus": "Post-chorus",
+				"Bridge": "Bridge",
+				"GtrSolo": "Gtr solo",
+				"SlideSolo": "Slide solo",
+				"DrumSolo": "Drum solo",
+				"PercussionSolo": "Percussion solo",
+				"BassSolo": "Bass solo",
+				"OrganSolo": "Organ solo",
+				"PianoSolo": "PianoSolo",
+				"KeyboardSolo": "Keyboard solo",
+				"SynthSolo": "Synth solo",
+				"HarmonicaSolo": "Harmonica solo",
+				"SaxSolo": "Sax solo",
+				"HornSolo": "Horn solo",
+				"FluteSolo": "Flute solo",
+				"NoiseSolo": "Noise solo",
+				"DJSolo": "DJ solo",
+				"SlowPart": "Slow part",
+				"FastPart": "Fast part",
+				"QuietPart": "Quiet part",
+				"LoudPart": "Loud part",
+				"HeavyPart": "Heavy part",
+				"SpaceyPart": "Spacey part",
+				"TrippyPart": "TrippyPart",
+				"Break": "Break",
+				"Breakdown": "Breakdown",
+				"GtrBreak": "Gtr break",
+				"BassBreak": "Bass break",
+				"DrumBreak": "Drum break",
+				"OrganBreak": "Organ break",
+				"SynthBreak": "Synth break",
+				"PianoBreak": "Piano break",
+				"KeyboardBreak": "Keyboard break",
+				"HornBreak": "Horn break",
+				"ScratchBreak": "Scratch break",
+				"PercussionBreak": "Percussion break",
+				"DJBreak": "DJ break",
+				"Interlude": "Interlude",
+				"Soundscape": "Soundscape",
+				"Jam": "Jam",
+				"SpaceJam": "Space jam",
+				"Vamp": "Vamp",
+				"BuildUp": "Build up",
+				"SpeedUp": "Speed up",
+				"Tension": "Tension",
+				"Release": "Release",
+				"Crescendo": "Crescendo",
+				"Melody": "Melody",
+				"LowMelody": "Low melody",
+				"HighMelody": "High melody",
+				"MainRiff": "Main riff",
+				"VerseRiff": "Verse riff",
+				"ChorusRiff": "Chorus riff",
+				"GtrRiff": "Gtr riff",
+				"BassRiff": "Bass riff",
+				"BigRiff": "Big riff",
+				"BiggerRiff": "Bigger riff",
+				"HeavyRiff": "Heavy riff",
+				"FastRiff": "Fast riff",
+				"SlowRiff": "Slow riff",
+				"SwingRiff": "Swing riff",
+				"ChunkyRiff": "Chunky riff",
+				"OddRiff": "Odd riff",
+				"Hook": "Hook",
+				"DrumRoll": "Drum roll",
+				"GtrLead": "Gtr lead",
+				"GtrFill": "Gtr fill",
+				"GtrHook": "Gtr hook",
+				"GtrMelody": "Gtr melody",
+				"GtrLine": "Gtr line",
+				"GtrLick": "Gtr lick",
+				"VocalBreak": "Vocal break",
+				"Ah": "Ah!",
+				"Yeah": "Yeah!",
+				"OohsAndAhs": "Oohs and Ahs",
+				"Prayer": "Prayer",
+				"Chant": "Chant",
+				"SpokenWord": "Spoken word",
+				"Outro": "Outro",
+				"OutroSolo": "Outro solo",
+				"OutroChorus": "Outro chorus",
+				"Ending": "Ending",
+				"BigRockEnding": "Big Rock Ending!",
+				"FadeOut": "Fade out",
+				"Section": "section"
+		}
     },
 	"Preview": {
 		"Experimental": {
