--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -340,136 +340,141 @@
                 "Strong": "STRONG"
             }
         },
-		"PracticeSections": {
-				"Intro": "Intro",
-				"IntroSlow": "Intro slow",
-				"IntroFast": "Intro fast",
-				"IntroHeavy": "Intro heavy",
-				"QuietIntro": "Quiet intro",
-				"NoiseIntro": "Noise intro",
-				"DrumIntro": "Drum intro",
-				"BassIntro": "Bass intro",
-				"VocalIntro": "Vocal intro",
-				"GtrIntro": "Gtr intro",
-				"ViolinIntro": "Violin intro",
-				"StringsIntro": "Strings intro",
-				"OrchIntro": "Orch intro",
-				"HornIntro": "Horn intro",
-				"HarmonicaIntro": "Harmonica intro",
-				"OrganIntro": "Organ intro",
-				"PianoIntro": "Piano intro",
-				"KeyboardIntro": "Keyboard intro",
-				"DJIntro": "DJ intro",
-				"IntroHook": "Intro hook",
-				"IntroRiff": "Intro riff",
-				"FadeIn": "Fade in",
-				"DrumsEnter": "Drums enter",
-				"BassEnters": "Bass enters",
-				"GtrEnters": "Gtr enters",
-				"Gtr2Enters": "Gtr2 enters",
-				"BandEnters": "Band enters",
-				"SynthEnters": "Synth enters",
-				"KeyboardEnters": "Keyboard enters",
-				"Organ enters": "Organ enters",
-				"Piano enters": "Piano enters",
-				"KickIt": "Kick It!",
-				"IntroVerse": "Intro verse",
-				"IntroChorus": "Intro chorus",
-				"Verse": "Verse",
-				"AltVerse": "Alt verse",
-				"QuietVerse": "Quiet verse",
-				"PreVerse": "Pre-verse",
-				"PostVerse": "Post-verse",
-				"Chorus": "Chorus",
-				"ChorusBreak": "Chorus break",
-				"BreakdownChorus": "Breakdown chorus",
-				"AltChorus": "Alt chorus",
-				"PreChorus": "Pre-chorus",
-				"PostChorus": "Post-chorus",
-				"Bridge": "Bridge",
-				"GtrSolo": "Gtr solo",
-				"SlideSolo": "Slide solo",
-				"DrumSolo": "Drum solo",
-				"PercussionSolo": "Percussion solo",
-				"BassSolo": "Bass solo",
-				"OrganSolo": "Organ solo",
-				"PianoSolo": "PianoSolo",
-				"KeyboardSolo": "Keyboard solo",
-				"SynthSolo": "Synth solo",
-				"HarmonicaSolo": "Harmonica solo",
-				"SaxSolo": "Sax solo",
-				"HornSolo": "Horn solo",
-				"FluteSolo": "Flute solo",
-				"NoiseSolo": "Noise solo",
-				"DJSolo": "DJ solo",
-				"SlowPart": "Slow part",
-				"FastPart": "Fast part",
-				"QuietPart": "Quiet part",
-				"LoudPart": "Loud part",
-				"HeavyPart": "Heavy part",
-				"SpaceyPart": "Spacey part",
-				"TrippyPart": "TrippyPart",
-				"Break": "Break",
-				"Breakdown": "Breakdown",
-				"GtrBreak": "Gtr break",
-				"BassBreak": "Bass break",
-				"DrumBreak": "Drum break",
-				"OrganBreak": "Organ break",
-				"SynthBreak": "Synth break",
-				"PianoBreak": "Piano break",
-				"KeyboardBreak": "Keyboard break",
-				"HornBreak": "Horn break",
-				"ScratchBreak": "Scratch break",
-				"PercussionBreak": "Percussion break",
-				"DJBreak": "DJ break",
-				"Interlude": "Interlude",
-				"Soundscape": "Soundscape",
-				"Jam": "Jam",
-				"SpaceJam": "Space jam",
-				"Vamp": "Vamp",
-				"BuildUp": "Build up",
-				"SpeedUp": "Speed up",
-				"Tension": "Tension",
-				"Release": "Release",
-				"Crescendo": "Crescendo",
-				"Melody": "Melody",
-				"LowMelody": "Low melody",
-				"HighMelody": "High melody",
-				"MainRiff": "Main riff",
-				"VerseRiff": "Verse riff",
-				"ChorusRiff": "Chorus riff",
-				"GtrRiff": "Gtr riff",
-				"BassRiff": "Bass riff",
-				"BigRiff": "Big riff",
-				"BiggerRiff": "Bigger riff",
-				"HeavyRiff": "Heavy riff",
-				"FastRiff": "Fast riff",
-				"SlowRiff": "Slow riff",
-				"SwingRiff": "Swing riff",
-				"ChunkyRiff": "Chunky riff",
-				"OddRiff": "Odd riff",
-				"Hook": "Hook",
-				"DrumRoll": "Drum roll",
-				"GtrLead": "Gtr lead",
-				"GtrFill": "Gtr fill",
-				"GtrHook": "Gtr hook",
-				"GtrMelody": "Gtr melody",
-				"GtrLine": "Gtr line",
-				"GtrLick": "Gtr lick",
-				"VocalBreak": "Vocal break",
-				"Ah": "Ah!",
-				"Yeah": "Yeah!",
-				"OohsAndAhs": "Oohs and Ahs",
-				"Prayer": "Prayer",
-				"Chant": "Chant",
-				"SpokenWord": "Spoken word",
-				"Outro": "Outro",
-				"OutroSolo": "Outro solo",
-				"OutroChorus": "Outro chorus",
-				"Ending": "Ending",
-				"BigRockEnding": "Big Rock Ending!",
-				"FadeOut": "Fade out",
-				"Section": "section"
+		"Practice": {
+			"Sections": {
+				"intro": "Intro",
+				"intro_slow": "Intro slow",
+				"intro_fast": "Intro fast",
+				"intro_heavy": "Intro heavy",
+				"quiet_intro": "Quiet intro",
+				"noise_intro": "Noise intro",
+				"drum_intro": "Drum intro",
+				"bass_intro": "Bass intro",
+				"vocal_intro": "Vocal intro",
+				"gtr_intro": "Gtr intro",
+				"violin_intro": "Violin intro",
+				"strings_intro": "Strings intro",
+				"orch_intro": "Orch intro",
+				"horn_intro": "Horn intro",
+				"harmonica_intro": "Harmonica intro",
+				"organ_intro": "Organ intro",
+				"piano_intro": "Piano intro",
+				"keyboard_intro": "Keyboard intro",
+				"dj_intro": "DJ intro",
+				"intro_hook": "Intro hook",
+				"intro_riff": "Intro riff",
+				"fade_ini": "Fade in",
+				"drums_enter": "Drums enter",
+				"bass_enters": "Bass enters",
+				"gtr_enters": "Gtr enters",
+				"rhy_enters": "Gtr2 enters",
+				"band_enters": "Band enters",
+				"synth_enters": "Synth enters",
+				"keyboard_enters": "Keyboard enters",
+				"organ_enters": "Organ enters",
+				"piano_enters": "Piano enters",
+				"kick_it": "Kick It!",
+				"intro_verse": "Intro verse",
+				"intro_chorus": "Intro chorus",
+				"verse": "Verse",
+				"alt_verse": "Alt verse",
+				"quiet_verse": "Quiet verse",
+				"preverse": "Pre-verse",
+				"postverse": "Post-verse",
+				"chorus": "Chorus",
+				"chorus_break": "Chorus break",
+				"breakdown_chorus": "Breakdown chorus",
+				"alt_chorus": "Alt chorus",
+				"prechorus": "Pre-chorus",
+				"postchorus": "Post-chorus",
+				"bridge": "Bridge",
+				"gtr_solo": "Gtr solo",
+				"slide_solo": "Slide solo",
+				"drum_solo": "Drum solo",
+				"percussion_solo": "Percussion solo",
+				"bass_solo": "Bass solo",
+				"organ_solo": "Organ solo",
+				"piano_solo": "PianoSolo",
+				"keyboard_solo": "Keyboard solo",
+				"synth_solo": "Synth solo",
+				"harmonica_solo": "Harmonica solo",
+				"sax_solo": "Sax solo",
+				"horn_solo": "Horn solo",
+				"flute_solo": "Flute solo",
+				"noise_solo": "Noise solo",
+				"dj_solo": "DJ solo",
+				"slow_part": "Slow part",
+				"fast_part": "Fast part",
+				"quiet_part": "Quiet part",
+				"loud_part": "Loud part",
+				"heavy_part": "Heavy part",
+				"spacey_part": "Spacey part",
+				"trippy_part": "TrippyPart",
+				"break": "Break",
+				"breakdown": "Breakdown",
+				"gtr_break": "Gtr break",
+				"bass_break": "Bass break",
+				"drum_break": "Drum break",
+				"organ_break": "Organ break",
+				"synth_break": "Synth break",
+				"piano_break": "Piano break",
+				"keyboard_break": "Keyboard break",
+				"horn_break": "Horn break",
+				"scratch_break": "Scratch break",
+				"percussion_break": "Percussion break",
+				"dj_break": "DJ break",
+				"interlude": "Interlude",
+				"soundscape": "Soundscape",
+				"jam": "Jam",
+				"space_jam": "Space jam",
+				"vamp": "Vamp",
+				"build_up": "Build up",
+				"speed_up": "Speed up",
+				"tension": "Tension",
+				"release": "Release",
+				"crescendo": "Crescendo",
+				"melody": "Melody",
+				"lo_melody": "Low melody",
+				"hi_melody": "High melody",
+				"main_riff": "Main riff",
+				"verse_riff": "Verse riff",
+				"chorus_riff": "Chorus riff",
+				"gtr_riff": "Gtr riff",
+				"bass_riff": "Bass riff",
+				"big_riff": "Big riff",
+				"bigger_riff": "Bigger riff",
+				"heavy_riff": "Heavy riff",
+				"fast_riff": "Fast riff",
+				"slow_riff": "Slow riff",
+				"swing_riff": "Swing riff",
+				"chunky_riff": "Chunky riff",
+				"odd_riff": "Odd riff",
+				"hook": "Hook",
+				"drum_roll": "Drum roll",
+				"gtr_lead": "Gtr lead",
+				"gtr_fill": "Gtr fill",
+				"gtr_hook": "Gtr hook",
+				"gtr_melody": "Gtr melody",
+				"gtr_line": "Gtr line",
+				"gtr_lick": "Gtr lick",
+				"vocal_break": "Vocal break",
+				"ah": "Ah!",
+				"yeah": "Yeah!",
+				"oohs": "Oohs and Ahs",
+				"prayer": "Prayer",
+				"chant": "Chant",
+				"spoken_word": "Spoken word",
+				"outro": "Outro",
+				"outro_solo": "Outro solo",
+				"outro_chorus": "Outro chorus",
+				"ending": "Ending",
+				"bre": "Big Rock Ending!",
+				"fade_out": "Fade out"
+			},
+			"SectionFormats": {
+				"LetterSection": "{0} section",
+				"WithNumber": "{0} {1}"
+			}
 		}
     },
 	"Preview": {
