--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -363,7 +363,7 @@
 				"dj_intro": "DJ intro",
 				"intro_hook": "Intro hook",
 				"intro_riff": "Intro riff",
-				"fade_ini": "Fade in",
+				"fade_in": "Fade in",
 				"drums_enter": "Drums enter",
 				"bass_enters": "Bass enters",
 				"gtr_enters": "Gtr enters",
@@ -394,7 +394,7 @@
 				"percussion_solo": "Percussion solo",
 				"bass_solo": "Bass solo",
 				"organ_solo": "Organ solo",
-				"piano_solo": "PianoSolo",
+				"piano_solo": "Piano solo",
 				"keyboard_solo": "Keyboard solo",
 				"synth_solo": "Synth solo",
 				"harmonica_solo": "Harmonica solo",
