Display a warning on the Difficulty Select screen when a human vocalist has no microphone connected Added a "no microphone" icon, and use it in the Active Players display.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -208,7 +208,8 @@
             "Modifiers": "Modifiers",
             "Ready": "Ready",
             "SitOut": "Sit Out",
-            "Done": "Done"
+            "Done": "Done",
+            "VocalistNoMicrophoneMessage" : "This vocalist has no microphone assigned! Assign one from the profiles menu."
         },
         "History": {
             "Name": "History",
