Show warning when player has no input device or microphone (#962)
* Display a warning on the Difficulty Select screen when a human vocalist has no microphone connected
Added a "no microphone" icon, and use it in the Active Players display.

* Implement "No Input Device" warning message for non-vocalists

* Add basic No Instrument icons for all instruments

* Remove one unused item from AssetGroup

* Update Instrument Icons (and No Instrument Icons)

* Adjust alignment of warning message (fixes issue with non 16:9 aspect ratios)

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -208,7 +208,9 @@
             "Modifiers": "Modifiers",
             "Ready": "Ready",
             "SitOut": "Sit Out",
-            "Done": "Done"
+            "Done": "Done",
+            "WarningPlayerNoInputDevice" : "This player has no input device assigned! Assign one from the Profiles menu.",
+            "WarningVocalistNoMicrophone" : "This vocalist has no microphone assigned! Assign one from the Profiles menu."
         },
         "History": {
             "Name": "History",
