Initial implementation of fail meter.
Create draggable FailMeter prefab with associated script to query EngineManager for current "happiness" score.
Add functionality to EngineManager to listen for note hits and misses and overstrums and update "happiness" score as appropriate.
Add No Fail Mode setting that disables the fail meter and prevents TrackPlayer et al from subscribing to the OnSongFail event.

Current limitations:

- We don't actually stop the song when the meter goes to zero.
- We only use the average score across an entire band for anything.
- Individual player performance is not displayed.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -714,6 +714,10 @@
                 "Name": "No Kicks",
                 "Description": "Removes all kick notes (drums only)."
             },
+            "NoFailMode": {
+                "Name": "No Fail Mode",
+                "Description": "Disables ending a song early when crowd happiness is too low."
+            },
             "NoteStreakFrequency": {
                 "Name": "Note Streak Frequency",
                 "Description": "Sets the frequency of note streak notifications.",
