Add profile option to disable range shift markers and added option to disable range shifts.
Also updated existing range shift code to make use of range shifts being generated in core rather than duplicating the effort now that core is parsing the range shifts itself.
Add range compression Modifier

- No range shifts (range compression) transposes notes from later ranges in a chart to the initial range.

- Added RangeShift property to InstrumentDifficulty.
- Populate RangeShift in SongChart.AutoGeneration
- Make Fret, DisjointMask, and NoteMask GuitarNote properties publically settable so that they can be updated for range compression.
- Added RangeCompress modifier type to Modifier.cs
- Added method to InstrumentDifficultyExtensions.cs to actually do the range compression based on the RangeShift events in the InstrumentDifficulty

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -61,6 +61,8 @@
             "UnpitchedOnly": "Unpitched Only",
             "NoDynamics": "No Dynamics",
             "NoVocalPercussion" : "No Percussion"
+            "NoDynamics": "No Dynamics",
+            "RangeCompress": "No Range Shifts"
         },
         "SortAttribute": {
             "Album": "Album",
