Add missing comma to lang json

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -60,7 +60,7 @@
             "TapsToHopos": "Taps to HOPOs",
             "UnpitchedOnly": "Unpitched Only",
             "NoDynamics": "No Dynamics",
-            "NoVocalPercussion" : "No Percussion"
+            "NoVocalPercussion" : "No Percussion",
             "NoDynamics": "No Dynamics",
             "RangeCompress": "No Range Shifts"
         },
