Add new "Drop" practice section
Desirable for an upcoming setlist song and likely to be frequently used in EDM charts, so I feel justified including it already

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -420,6 +420,7 @@
 				"scratch_break": "Scratch break",
 				"percussion_break": "Percussion break",
 				"dj_break": "DJ break",
+                                "drop": "Drop",
 				"interlude": "Interlude",
 				"soundscape": "Soundscape",
 				"jam": "Jam",
