--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -387,6 +387,7 @@
 				"bridge": "Bridge",
 				"gtr_solo": "Gtr solo",
 				"slide_solo": "Slide solo",
+				"violin_solo": "Violin solo",
 				"drum_solo": "Drum solo",
 				"percussion_solo": "Percussion solo",
 				"bass_solo": "Bass solo",
@@ -420,7 +421,7 @@
 				"scratch_break": "Scratch break",
 				"percussion_break": "Percussion break",
 				"dj_break": "DJ break",
-                                "drop": "Drop",
+				"drop": "Drop",
 				"interlude": "Interlude",
 				"soundscape": "Soundscape",
 				"jam": "Jam",
