Add sort by 'Stars' feature with UI and backend updates
Backend:
- Update SongEntry and sorting logic in YARG.Core
- Integrate new sort mode into SongCache system
Frontend:
- Add new menu UI for star sorting option
- Update assets and localization files (en-US.json)
Other:
- Ensure compatibility with existing sorting workflows

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -73,6 +73,7 @@
             "Playlist": "Playlist",
             "SongLength": "Duration",
             "Source": "Source",
+            "Stars": "Stars",
             "Unspecified": "None",
             "Year": "Year",
             "DateAdded": "Date Added",
