Add support for shift indicators for five fret instruments (#1007)
* Add shift indicators for five fret instruments.

* Make frets that are about to become active pulse color during range shift.

* Move markers one beatline ahead. Adjust color pulse timing and shape.

All credit to grishhung for providing the solution to the correct lerp calculation.

* Correct miscalculation of time between beats.

* Make range shifts work correctly in practice mode and when seeking in replays.

* Fix arrow direction when lefty flip is on

* Add missing prefab for the five fret shift indicator. Adjust X position of shift indicator based on shift range.

* Fix shift indicator positioning for RYB shifts.
Fix unwanted fade out when deactivating already inactive fret.

* Fix fret pulse start time calculation.

* Add range indicator to beatline at range shift point.

* Add profile option to disable range shift markers and added option to disable range shifts.

Also updated existing range shift code to make use of range shifts being generated in core rather than duplicating the effort now that core is parsing the range shifts itself.
Add range compression Modifier

- No range shifts (range compression) transposes notes from later ranges in a chart to the initial range.

- Added RangeShift property to InstrumentDifficulty.
- Populate RangeShift in SongChart.AutoGeneration
- Make Fret, DisjointMask, and NoteMask GuitarNote properties publically settable so that they can be updated for range compression.
- Added RangeCompress modifier type to Modifier.cs
- Added method to InstrumentDifficultyExtensions.cs to actually do the range compression based on the RangeShift events in the InstrumentDifficulty

* Don't show irrelevant profile settings for the selected game mode.

* Add missing comma to lang json

* Add ugly no range shift modifer icon

* only show range shift arrows when range actually changes
- Handles situation where size changes but range does not
- Renamed FiveFretRangeShift.Range

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -60,7 +60,8 @@
             "TapsToHopos": "Taps to HOPOs",
             "UnpitchedOnly": "Unpitched Only",
             "NoDynamics": "No Dynamics",
-            "NoVocalPercussion" : "No Percussion"
+            "NoVocalPercussion" : "No Percussion",
+            "RangeCompress": "No Range Shifts"
         },
         "SortAttribute": {
             "Album": "Album",
