Playlist and setlist improvements - Add ability to save current setlist to a playlist - Show current setlist in playlist view, allowing deletion of songs or entire setlist - Fix bug where exiting playlist select view returned to main menu instead of library - Add ability to add playlist to setlist in one go

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -271,19 +271,21 @@
                     "CreateNewPlaylist": "Create New...",
                     "RemovePlaylist": "Remove Playlist",
                     "ViewSongFolder": "View Song Folder",
-                    "CopySongChecksum": "Copy Song Checksum"
+                    "CopySongChecksum": "Copy Song Checksum",
                 }
             },
             "Back": "BACK",
             "NoPlayersConnected": "No players connected! Go to the profiles menu to connect a player.",
             "Play": "Play Song",
             "Search": "Search",
+            "CurrentSetlist": "Current Setlist",
             "AddToSet": "Add To Setlist",
             "AddToSetWithHold": "<align=left><size=80%>Add To Setlist<br>(Hold) Start The Set</size></align>",
             "AddedToSet": "Added To Setlist",
             "PlaylistAddedToSet": "Added {0:N0} Songs From Playlist To Setlist",
             "StartSet": "Start The Set",
             "NoSongsInPlaylist": "No Songs In Playlist",
+            "CannotAddToSelf": "No, I will not create an ouroboros for you. Nice try, Jaden.",
             "MoreOptions": "<align=left><size=80%>More Options<br>(Hold) Navigate Sections</size></align>"
         },
         "ProfileInfo": {
