initial implementation of an actual "play a show" feature. really, this time.
Currently outstanding issues:
- Needs localization of category names
- There's a known bug when exiting the show list view that can sometimes result in the library view becoming empty until a new show is started and exited in a different way (or played to completion)
- "A Random Song" appears too often since it is the fallback for a couple of other categories.

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -202,6 +202,10 @@
                 "Title": "Experimental Features Notice",
                 "Description": "The options about to be displayed represent a work in progress. These features are subject to change, may contain bugs, and <b>could even cause major problems if enabled</b>.",
                 "Confirm": "I Understand"
+            },
+            "ShowDialog": {
+                "Title": "Choose Your Fate",
+                "Select": "That's Plenty"
             }
         },
         "DifficultySelect": {
