Fix "TrippyPart" typo

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -410,7 +410,7 @@
 				"loud_part": "Loud part",
 				"heavy_part": "Heavy part",
 				"spacey_part": "Spacey part",
-				"trippy_part": "TrippyPart",
+				"trippy_part": "Trippy part",
 				"break": "Break",
 				"breakdown": "Breakdown",
 				"gtr_break": "Gtr break",
