--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -1,4 +1,4 @@
-{
+﻿{
     "Language": {
         "Name": "English",
         "Region": "United States",
@@ -632,7 +632,7 @@
             },
             "FpsStats": {
                 "Name": "Show FPS Counter",
-                "Description": "Shows the framerate counter on the Status Bar"
+                "Description": "Shows the framerate counter on the Status Bar."
             },
             "FullscreenMode": {
                 "Name": "Fullscreen Mode",
@@ -689,7 +689,7 @@
             },
             "KickBounceMultiplier": {
                 "Name": "Drum Kick Bounce Multiplier",
-                "Description": "Controls the amount the track should bounce when you hit a kick note (drums only). Set to zero if you want to disable."
+                "Description": "Controls the amount the track should bounce when you hit a kick note (drums only). Set to \"0\" if you want to disable."
             },
             "LowQuality": {
                 "Name": "Low Quality Mode",
@@ -773,7 +773,7 @@
             "SfxVolume": {
                 "Name": "SFX Volume",
                 "PauseName": "SFX",
-                "Description": "Adjusts the game's sound effect volume, such as when gaining a star, or activating starpower."
+                "Description": "Adjusts the game's sound effect volume, such as when gaining a star, or activating Star Power."
             },
             "ShowAdvancedMusicLibraryOptions": {
                 "Name": "Show Advanced Music Library Options",
@@ -814,7 +814,7 @@
             },
             "StarPowerHighwayFx": {
                 "Name": "Star Power Highway FX Mode",
-                "Description": "Disables visual elements on the highway which appear when Star Power is active",
+                "Description": "Disables visual elements on the highway which appear when Star Power is active.",
                 "Dropdown": {
                     "Off": "Off",
                     "On": "On",
@@ -838,8 +838,8 @@
                 "Description": "Use full directory for the playlist sort option in the music library. <color=white>Rescan required if changed!</color>"
             },
             "UseStarpowerFx": {
-                "Name": "Use Starpower SFX",
-                "Description": "If enabled, it will add reverb to stems where the player has starpower enabled.",
+                "Name": "Use Star Power SFX",
+                "Description": "If enabled, it will add reverb to stems where the player has Star Power enabled.",
                 "Dropdown": {
                     "MultitrackOnly": "Multitrack Only",
                     "Off": "Off",
@@ -852,7 +852,7 @@
             },
             "WhammyPitchShiftAmount": {
                 "Name": "Whammy Pitch Shift Amount",
-                "Description": "Number of semitones the pitch is changed when the whammy bar is fully pressed. Larger amounts result in lower pitches; default is 1."
+                "Description": "Number of semitones the pitch is changed when the whammy bar is fully pressed. Larger amounts result in lower pitches; default is \"1\"."
             },
             "VideoCalibration": {
                 "Name": "Video Calibration (ms)",
@@ -886,19 +886,19 @@
             },
             "ApplyVolumesInMusicLibrary": {
                 "Name": "Apply Volume Settings to Music Library Previews",
-                "Description": "I think this one speaks for itself"
+                "Description": "Volume settings for specific instrumments will be applied in the Music Library as well."
             },
             "RB3EEnabled": {
                 "Name": "Enable RB3E Stage Kit data stream",
-                "Description": "Enables sending of RB3E style stage kit information packets over the network, for hardware such as StageKitPied"
+                "Description": "Enables sending of RB3E style stage kit information packets over the network, for hardware such as StageKitPied."
             },
             "RB3EBroadcastIP": {
                 "Name": "RB3E target IP",
-                "Description": "Sets the target IP for the RB3E data stream packets. 255.255.255.255 is the broadcast address for the current network"
+                "Description": "Sets the target IP for the RB3E data stream packets. 255.255.255.255 is the broadcast address for the current network."
             },
             "DMXKeyframeChannel": {
                 "Name": "DMX Keyframe",
-                "Description": "This channel receives the Next (3), Previous (13), and First(23) keyframe calls."
+                "Description": "This channel receives the Next (3), Previous (13), and First (23) keyframe calls."
             },
             "DMXBonusEffectChannel": {
                 "Name": "DMX Bonus Effect",
@@ -906,11 +906,11 @@
             },
             "DMXDrumsChannel": {
                 "Name": "DMX Drum",
-                "Description": "This channel gets additively set to the current drum notes:  Kick (1), Red (2), Yellow (4), Blue (8), Green (16),  Yellow Cymbal (32), Blue Cymbal (64), Green Cymbal (128)."
+                "Description": "This channel gets additively set to the current drum notes: Kick (1), Red (2), Yellow (4), Blue (8), Green (16),  Yellow Cymbal (32), Blue Cymbal (64), Green Cymbal (128)."
             },
             "DMXBeatlineChannel": {
                 "Name": "DMX Beatline",
-                "Description": "This channel gets set on every measure  beat (1) and Strong beat (11)."
+                "Description": "This channel gets set on every measure beat (1) and Strong beat (11)."
             },
             "DMXPostProcessingChannel": {
                 "Name": "DMX Post-Processsing",
@@ -926,7 +926,7 @@
             },
             "DMXPerformerChannel": {
                 "Name": "DMX Performer",
-                "Description": "This channel gets set to the current spotlight and sing-a-long"
+                "Description": "This channel gets set to the current spotlight and sing-a-long."
             },
             "DMXKeysChannel": {
                 "Name": "DMX Keys",
@@ -942,15 +942,15 @@
             },
             "ShowTime": {
                 "Name": "Show Time",
-                "Description": "Show current time on Status Bar"
+                "Description": "Show current time on Status Bar."
             },
             "ShowBattery": {
                 "Name": "Show Battery",
-                "Description": "Show battery level on Status Bar (if battery is currently discharging)"
+                "Description": "Show battery level on Status Bar (if battery is currently discharging)."
             },
             "MemoryStats": {
                 "Name": "Show Memory Stats",
-                "Description": "Show memory usage stats on the Status Bar"
+                "Description": "Show memory usage stats on the Status Bar."
             },
             "ShowActivePlayers": {
                 "Name": "Show Active Players",
@@ -958,11 +958,11 @@
             },
             "ShowActiveBots": {
                 "Name": "Show Active Bots",
-                "Description": "Show the number of active bot profiles on the Status Bar (if any)"
+                "Description": "Show the number of active bot profiles on the Status Bar (if any)."
             },
             "DMXUniverseChannel": {
                 "Name": "DMX Broadcast Universe",
-                "Description": "This is the universe that YARG will send the sACN packet to. Default is 1. Maximum is 65535"
+                "Description": "This is the universe that YARG will send the sACN packet to. Default is \"1\". Maximum is \"65535\"."
             },
             "ReconnectProfiles": {
                 "Name": "Reconnect Profiles",
@@ -1277,7 +1277,7 @@
                 },
                 "FrontToBackRatio": {
                     "Name": "Hit Window Ratio",
-                    "Description": "The hit window's front to back ratio. 0 will bring the hit window fully backwards, 1 will keep it in the center, and 2 will move it to the front."
+                    "Description": "The hit window's front to back ratio. \"0\" will bring the hit window fully backwards, \"1\" will keep it in the center, and \"2\" will move it to the front."
                 },
                 "HitPercentE": {
                     "Name": "Hit Percent (Easy)",
