Add bindings for Rock Band and Riffmaster guitar solo buttons (#925)
* Add separate bindings for solo frets. Bind solo frets to solo action by default.

* Add text for solo tap engine parameter

* Update ModifierIcons with solo taps icon

--- a/Assets/StreamingAssets/lang/en-US.json
+++ b/Assets/StreamingAssets/lang/en-US.json
@@ -382,7 +382,12 @@
             "Red": "Red Fret (Second)",
             "Yellow": "Yellow Fret (Third)",
             "Blue": "Blue Fret (Fourth)",
-            "Orange": "Orange Fret (Fifth)"
+            "Orange": "Orange Fret (Fifth)",
+            "SoloGreen": "Solo Green Fret",
+            "SoloRed": "Solo Red Fret",
+            "SoloYellow": "Solo Yellow Fret",
+            "SoloBlue": "Solo Blue Fret",
+            "SoloOrange": "Solo Orange Fret"
         },
         "Guitar": {
             "StrumUp": "Strum Up",
@@ -1366,6 +1371,10 @@
                 "SustainDropLeniency": {
                     "Name": "Sustain Drop Leniency",
                     "Description": ""
+                },
+                "SoloTaps": {
+                    "Name": "Allow Taps During Solos",
+                    "Description": "Allows solo buttons to tap notes during solos"
                 }
             },
             "HighwayPreset" : {
